--- a/translations/fr/LC_MESSAGES/messages.po
+++ b/translations/fr/LC_MESSAGES/messages.po
@@ -62,6 +62,10 @@ msgstr "Veuillez vous connecter pour accéder au tableau de bord."
 msgid "Time of the Match: {} (GMT)"
 msgstr "Heure du match : {} (GMT)"
 
+#: app.py:154 app.py:276
+msgid "(Match not finished yet)"
+msgstr "(Match pas encore terminé)"
+
 #: app.py:185 app.py:308
 msgid "No guess"
 msgstr "Pas devinette"
