--- a/translations/it/LC_MESSAGES/messages.po
+++ b/translations/it/LC_MESSAGES/messages.po
@@ -62,6 +62,10 @@ msgstr "Effettua il login per accedere alla dashboard."
 msgid "Time of the Match: {} (GMT)"
 msgstr "Orario della partita: {} (GMT)"
 
+#: app.py:154 app.py:276
+msgid "(Match not finished yet)"
+msgstr "(Partita non ancora terminata)"
+
 #: app.py:185 app.py:308
 msgid "No guess"
 msgstr "Nessuna ipotesi"
